Use QML Clock in calendar config dialog

Open the QML Clock like it's done in the 'New Appointment'
dialog when changing a time.

BUG: 260267